// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnchorLink component renders default correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders disabled correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--disabled MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders icon disabled correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--disabled MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="icon"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders leading icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <svg
      aria-hidden="true"
      class="icon"
      data-testid="internal"
      focusable="false"
    />
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders multi-line with icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      <p
        style="width: 300px; text-align: left;"
      >
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
      </p>
    </span>
    <svg
      aria-hidden="true"
      class="icon"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders only with data from context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--black MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders trailing external icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="icon"
      data-testid="external"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders trailing internal icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="icon"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders with a specified color 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--white MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with children component 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      <div>
        Test
      </div>
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with className 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover test-className Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with iconInverted 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon icon--inverted"
      data-testid="internal"
      focusable="false"
    />
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with rest props 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
    rel="noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders within a dark color pair context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--white MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders within a light color pair context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink Anchorlink--white MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;
